--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,6 +16,6 @@ spec:
     spec:
       containers:
       - name: todo
-        image: sid716/jenkins_argocd_pipelines_sample:v1
+        image: sid716/jenkins_argocd_pipelines_samples:47
         ports:
         - containerPort: 8000
